product page buy button spacing fix

--- a/src/scss/scoped/_product.scss
+++ b/src/scss/scoped/_product.scss
@@ -29,6 +29,10 @@
         align-items: center;
         justify-content: center;
         margin-top: $space-lg;
+        @include breakpoint-down(md) {
+          margin: $space-lg auto;
+          margin-bottom: 0; 
+        }
       }
     }
     // bold overrides
